--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <input type="text" class="form-control" id="person-name" placeholder="Name">
                         </div>
                         <div class="col-4">
-                            <button type="button" class="btn btn-primary w-100" id="add-person">Add</button>
+                            <button type="button" class="btn btn-primary w-100" id="add-person" disabled>Add</button>
                         </div>
                     </div>
                     <!-- People List -->
