handle deletion of a person, and added a maxlength cap to the person name input field

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <!-- Add Person row -->
                     <div class="mb-4 row g-2">
                         <div class="col-8">
-                            <input type="text" class="form-control" id="person-name" placeholder="Name">
+                            <input type="text" class="form-control" id="person-name" maxlength="25" placeholder="Name">
                         </div>
                         <div class="col-4">
                             <button type="button" class="btn btn-primary w-100" id="add-person" disabled>Add</button>
