added margin below h1 and removed person placeholder

--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
                     </div>
                     <!-- People List -->
                     <div class="mb-4">
-                        <ul class="list-group" id="people-list">
-                            <!-- Dynamically added items will appear here -->
-                            <li class="list-group-item d-flex justify-content-between">
-                                PersonName
-                                <button class="btn btn-sm btn-danger">Remove</button>
-                            </li>
-                        </ul>
+                        <ul class="list-group" id="people-list"></ul>
                     </div>
                 </div>
 
