--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container my-5 small-container">
         <header>
-            <h1 class="text-center">Bill Splitter</h1>
+            <h1 class="text-center mb-5">Bill Splitter</h1>
         </header>
         <main>
             <form>
