--- a/index.html
+++ b/index.html
@@ -15,24 +15,41 @@
         <main>
             <form>
                 <!-- Add People section -->
-                <div class="mb-4">
-                    <h4>Add People</h4>
+                <div class="mb-5">
+                    <h3>Add People</h3>
                     <!-- Add Person row -->
                     <div class="mb-4 row g-2">
-                        <div class="col-8">
-                            <input type="text" class="form-control" id="person-name" maxlength="25" placeholder="Name">
+                        <div class="col-9">
+                            <input type="text" class="form-control" id="person-name" placeholder="Name">
                         </div>
-                        <div class="col-4">
+                        <div class="col-3">
                             <button type="button" class="btn btn-primary w-100" id="add-person" disabled>Add</button>
                         </div>
                     </div>
                     <!-- People List -->
-                    <div class="mb-4">
+                    <div>
                         <ul class="list-group" id="people-list"></ul>
                     </div>
                 </div>
-
-
+                <!-- Add Item section -->
+                <div class="mb-4">
+                    <h3>Add Items</h3>
+                    <!-- Add Item row -->
+                    <div class="mb-4 row g-2">
+                        <div class="col-3">
+                            <input type="text" class="form-control" id="item-name" placeholder="Item name">
+                        </div>
+                        <div class="col-3">
+                            <input type="text" class="form-control" id="item-cost" placeholder="Cost">
+                        </div>
+                        <div class="col-3">
+                            <input type="text" class="form-control" id="item-owner" placeholder="Person">
+                        </div>
+                        <div class="col-3">
+                            <button type="button" class="btn btn-primary w-100" id="add-item" disabled>Add</button>
+                        </div>
+                    </div>
+                </div>
             </form>
         </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
