added input handling for the item cost field

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <input type="text" class="form-control" id="item-name" placeholder="Item">
                         </div>
                         <div class="col-3">
-                            <input type="text" class="form-control" id="item-cost" placeholder="Cost">
+                            <input type="text" inputmode="decimal" class="form-control" id="item-cost" placeholder="$0.00">
                         </div>
                         <div class="col-3">
                             <select class="form-select" id="item-owner">
