force dollar format for tax field

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <!-- Tax/Tip/Fee row -->
                     <div class="mb-4 row g-2">
                         <div class="col-9">
-                            <input type="text" class="form-control" id="tax-cost" placeholder="Tax, Tip, or Fee">
+                            <input type="text" class="form-control" id="tax-cost" placeholder="$0.00">
                         </div>
                         <div class="col-3">
                             <button type="button" class="btn btn-primary w-100" id="add-tax" disabled>Add</button>
