--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <ul class="list-group" id="item-list"></ul>
                     </div>
                 </div>
-                <!-- Item section -->
+                <!-- Tax/Tip/Fee section -->
                 <div class="mb-5">
                     <h3>Add Tax, Tip, and Fees</h3>
                     <p>Add in order as they appear on your receipt</p>
@@ -72,6 +72,13 @@
                     <!-- Tax List -->
                     <div>
                         <ul class="list-group" id="tax-list"></ul>
+                    </div>
+                </div>
+                <!-- Totals section -->
+                <div class="mb-5">
+                    <h3>Totals</h3>
+                    <div>
+                        <ul class="list-group" id="totals-list"></ul>
                     </div>
                 </div>
             </form>
