--- a/index.html
+++ b/index.html
@@ -13,77 +13,66 @@
             <h1 class="text-center mb-5">Bill Splitter</h1>
         </header>
         <main>
-            <form>
-                <!-- People section -->
-                <div class="mb-5">
-                    <h3>Add People</h3>
-                    <!-- Person row -->
-                    <div class="mb-4 row g-2">
-                        <div class="col-9">
-                            <input type="text" class="form-control" id="person-name" placeholder="Name">
-                        </div>
-                        <div class="col-3">
-                            <button type="button" class="btn btn-primary w-100" id="add-person" disabled>Add</button>
-                        </div>
+            <div class="mb-5">
+                <h3>Add People</h3>
+                <div class="mb-4 row g-2">
+                    <div class="col-9">
+                        <input type="text" class="form-control" id="person-input" placeholder="Name">
                     </div>
-                    <!-- People List -->
-                    <div>
-                        <ul class="list-group" id="people-list"></ul>
+                    <div class="col-3">
+                        <button type="button" class="btn btn-primary w-100" id="add-person-button" disabled>Add</button>
                     </div>
                 </div>
-                <!-- Item section -->
-                <div class="mb-5">
-                    <h3>Add Items</h3>
-                    <!-- Item row -->
-                    <div class="mb-4 row g-2">
-                        <div class="col-3">
-                            <input type="text" class="form-control" id="item-name" placeholder="Item">
-                        </div>
-                        <div class="col-3">
-                            <input type="text" inputmode="decimal" class="form-control" id="item-cost" placeholder="$0.00">
-                        </div>
-                        <div class="col-3">
-                            <select class="form-select" id="item-owner">
-                                <option value="" disabled selected>Person</option>
-                            </select>
-                        </div>
-                        <div class="col-3">
-                            <button type="button" class="btn btn-primary w-100" id="add-item" disabled>Add</button>
-                        </div>
+                <div>
+                    <ul class="list-group" id="people-list"></ul>
+                </div>
+            </div>
+            <div class="mb-5">
+                <h3>Add Items</h3>
+                <div class="mb-4 row g-2">
+                    <div class="col-3">
+                        <input type="text" class="form-control" id="item-name-input" placeholder="Item">
                     </div>
-                    <!-- Item List -->
-                    <div>
-                        <ul class="list-group" id="item-list"></ul>
+                    <div class="col-3">
+                        <input type="text" inputmode="decimal" class="form-control" id="item-cost-input" placeholder="$0.00">
+                    </div>
+                    <div class="col-3">
+                        <select class="form-select" id="item-owner-input">
+                            <option value="" disabled selected>Person</option>
+                        </select>
+                    </div>
+                    <div class="col-3">
+                        <button type="button" class="btn btn-primary w-100" id="add-item-button" disabled>Add</button>
                     </div>
                 </div>
-                <!-- Tax/Tip/Fee section -->
-                <div class="mb-5">
-                    <h3>Add Tax, Tip, and Fees</h3>
-                    <p>Add in order as they appear on your receipt</p>
-                    <!-- Tax/Tip/Fee row -->
-                    <div class="mb-4 row g-2">
-                        <div class="col-9">
-                            <input type="text" class="form-control" id="tax-cost" placeholder="$0.00">
-                        </div>
-                        <div class="col-3">
-                            <button type="button" class="btn btn-primary w-100" id="add-tax" disabled>Add</button>
-                        </div>
+                <div>
+                    <ul class="list-group" id="item-list"></ul>
+                </div>
+            </div>
+            <div class="mb-5">
+                <h3>Add Tax, Tip, and Fees</h3>
+                <p>Add in order as they appear on your receipt</p>
+                <div class="mb-4 row g-2">
+                    <div class="col-9">
+                        <input type="text" class="form-control" id="charge-input" placeholder="$0.00">
                     </div>
-                    <!-- Tax List -->
-                    <div>
-                        <ul class="list-group" id="tax-list"></ul>
+                    <div class="col-3">
+                        <button type="button" class="btn btn-primary w-100" id="add-tax-button" disabled>Add</button>
                     </div>
                 </div>
-                <!-- Totals section -->
-                <div class="mb-5">
-                    <h3>Totals</h3>
-                    <div>
-                        <ul class="list-group" id="totals-list"></ul>
-                    </div>
+                <div>
+                    <ul class="list-group" id="charge-list"></ul>
                 </div>
-            </form>
+            </div>
+            <div class="mb-5">
+                <h3>Totals</h3>
+                <div>
+                    <ul class="list-group" id="totals-list"></ul>
+                </div>
+            </div>
         </main>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script-new.js"></script>
 </body>
 </html>
