--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container my-5 small-container">
+    <div class="container my-5 small-container" id="container">
         <header>
             <h1 class="text-center mb-5">Bill Splitter</h1>
         </header>
@@ -20,11 +20,11 @@
                         <input type="text" class="form-control" id="person-input" placeholder="Name">
                     </div>
                     <div class="col-3">
-                        <button type="button" class="btn btn-primary w-100" id="add-person-button" disabled>Add</button>
+                        <button type="button" class="btn btn-primary w-100" id="add-person-button" data-action="add" data-list="people" disabled>Add</button>
                     </div>
                 </div>
                 <div>
-                    <ul class="list-group" id="people-list"></ul>
+                    <ul class="list-group" id="people"></ul>
                 </div>
             </div>
             <div class="mb-5">
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div>
-                    <ul class="list-group" id="item-list"></ul>
+                    <ul class="list-group" id="items"></ul>
                 </div>
             </div>
             <div class="mb-5">
@@ -67,12 +67,12 @@
             <div class="mb-5">
                 <h3>Totals</h3>
                 <div>
-                    <ul class="list-group" id="totals-list"></ul>
+                    <ul class="list-group" id="charges"></ul>
                 </div>
             </div>
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script-new.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
