render person dropdown after adding person and render totals

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <input type="text" inputmode="decimal" class="form-control" placeholder="$0.00" data-list="items" >
                     </div>
                     <div class="col-3">
-                        <select class="form-select" id="item-owner-input">
+                        <select class="form-select" id="item-owner-input" data-list="people">
                             <option value="" disabled selected>Person</option>
                         </select>
                     </div>
@@ -67,7 +67,7 @@
             <div class="mb-5">
                 <h3>Totals</h3>
                 <div>
-                    <ul class="list-group"></ul>
+                    <ul class="list-group" id="totals"></ul>
                 </div>
             </div>
         </main>
